--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://i.ibb.co/MZgHNtX/Nesta-Brand-1.png">
+    <link rel="stylesheet" href="css/Zuri-Article.css">
     <title>Zuri-Article</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+da
+    <article>
+        <h2>Hey!</h2>
+        I'm Nesta, an international intern this year in the zuri intaernship
+        when joining this team I definitely had a lot of goals in mind,
+        I mean who wouldn't?😅 for me my goals where quite straight forward:
+        I had to get the most out of this 8-week journey. i.e get into the right tracks
+        be optimally focused and dedicated to complete all tasks which will be given(*On time)
+        Even though where I live internet connectivity is quite a challenge but this couldn't stop 
+        me from abandoning such an opportuinity
+    </article>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
