--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -12,10 +12,12 @@
     <header>
 
     </header>
-da
+
     <article>
         <h2>Hey!</h2>
-        I'm Nesta, an international intern this year in the zuri intaernship
+        I'm Nesta, an international intern from Cameroon 
+        this year in the 
+        <a href="https://internship.zuri.team/" target="_blank" rel="noopener noreferrer">Zuri Intership</a>
         when joining this team I definitely had a lot of goals in mind,
         I mean who wouldn't?😅 for me my goals where quite straight forward:
         I had to get the most out of this 8-week journey. i.e get into the right tracks
