--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -10,21 +10,49 @@
 </head>
 <body>
     <header>
-
+        <h1>Goals for the HNG internship</h1>
     </header>
 
-    <article>
-        <h2>Hey!</h2>
-        I'm Nesta, an international intern from Cameroon 
-        this year in the 
-        <a href="https://internship.zuri.team/" target="_blank" rel="noopener noreferrer">Zuri Intership</a>
-        when joining this team I definitely had a lot of goals in mind,
-        I mean who wouldn't?😅 for me my goals where quite straight forward:
-        I had to get the most out of this 8-week journey. i.e get into the right tracks
-        be optimally focused and dedicated to complete all tasks which will be given(*On time)
-        Even though where I live internet connectivity is quite a challenge but this couldn't stop 
-        me from abandoning such an opportuinity
-    </article>
+    <main>
+        <article>
+            <h1>Hey!</h1>
+            <p>
+                I'm Nesta, an international intern from Cameroon
+                this year(2021) at the
+                <a href="https://internship.zuri.team/" target="_blank" rel="noopener noreferrer">Zuri Intership</a>.
+            </p>
+            <p>
+                when joining this team I definitely had a lot of goals in mind,
+                I mean who wouldn't?😅 for me, my goals where quite straight forward:
+                I had to get the most out of this 8-week journey. i.e get into the right tracks
+                (Digital Marketing, UI/UX, and Frontend Developement)
+                Be optimally focused and dedicated to complete all assignments/projects which will be given(*On time)
+                Even though where I live internet connectivity is quite a challenge but this couldn't stop
+                me from persuing this quest for knowledge.
+            </p>
+            <p>
+                Gaining knowledge was a priority for me. But I couldn't just get knowledge
+                and leave. I had to open-mindedly share the knowledge I had with my
+                peers in this quest with me. To do this, relating with others, chating,
+                sharing ideas, and even making new friends.
+            </p>
+            <p>
+                There's this saying which says
+                <cite>Rules are there to be broken. Denzel Washington</cite>
+                But that's definitely not what I intented to do during the course of
+                this internship. Instead, my aim was to follow every single rule meticulously. I may
+                be a <em>"Mumu😅"</em>, but rather than being evicted for misconduct,
+                being present till the end was the goal.
+            </p>
+            <p>
+                Most importantly I wanted to show the world what I'm qualified to be on
+                the job market.
+            </p>
+            <h2>I Hope for the best!😊</h2>
+        </article>
+    </main>
+
+    
 
     <footer>
 
