added some style

--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -41,7 +41,7 @@
                 <cite>Rules are there to be broken. Denzel Washington</cite>
                 But that's definitely not what I intented to do during the course of
                 this internship. Instead, my aim was to follow every single rule meticulously. I may
-                be a <em>"Mumu😅"</em>, but rather than being evicted for misconduct,
+                be a <em>"Mumu"</em>😅, but rather than being evicted for misconduct,
                 being present till the end was the goal.
             </p>
             <p>
@@ -52,7 +52,9 @@
         </article>
     </main>
 
-    
+    <aside>
+        <h2 class="caps">Cool stuffs you should learn</h2>
+    </aside>
 
     <footer>
 
