--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -52,9 +52,9 @@
         </article>
     </main>
 
-    <aside>
+    <article>
         <h2 class="caps">Cool stuffs you should learn</h2>
-    </aside>
+    </article>
 
     <footer>
 
