--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -53,7 +53,7 @@
     </main>
 
     <article>
-        <h1 class="caps">Cool stuffs you should learn</h1>
+        <h1 class="smallCaps">Cool stuffs you should learn</h1>
     </article>
 
     <footer>
