--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -54,6 +54,22 @@
 
     <article>
         <h1 class="smallCaps">Cool stuffs you should learn</h1>
+        <h2>Learn Figma</h2>
+        <p>
+            Do you want to know how to design apps? Figma is one of the best,
+            if not <em>THE</em> Best tool you could ever want to learn how to design
+            mobile applications and websites.
+        </p>
+        <p>
+            The video below would submerge you with knowledge on how to design with 
+            Figma.
+        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dXQ7IHkTiMM" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <h2>Learn GIT</h2>
+        <h2>Learn HTML</h2>
+        <h2>Learn Flutter</h2>
     </article>
 
     <footer>
