--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -15,7 +15,7 @@
 
     <main>
         <article>
-            <h1>Hey!</h1>
+            <h1 class="ease">Hey!</h1>
             <p>
                 I'm Nesta, an international intern from Cameroon
                 this year(2021) at the
@@ -48,32 +48,100 @@
                 Most importantly I wanted to show the world what I'm qualified to be on
                 the job market.
             </p>
-            <h2>I Hope for the best!😊</h2>
+            <h2 class="ease">I Hope for the best!😊</h2>
         </article>
     </main>
 
-    <article>
+    <section>
         <h1 class="smallCaps">Cool stuffs you should learn</h1>
-        <h2>Learn Figma</h2>
-        <p>
-            Do you want to know how to design apps? Figma is one of the best,
-            if not <em>THE</em> Best tool you could ever want to learn how to design
-            mobile applications and websites.
-        </p>
-        <p>
-            The video below would submerge you with knowledge on how to design with 
-            Figma.
-        </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dXQ7IHkTiMM" title="YouTube video player"
-            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        <h2>Learn GIT</h2>
-        <h2>Learn HTML</h2>
-        <h2>Learn Flutter</h2>
-    </article>
+
+        <article>
+            <h1>Learn Figma</h1>
+            <p>
+                If you’ve ever wanted to pursue a career in design, learn the ins-and-outs of the design process, or just want to
+                improve your relationships with the designers in your life, you’ve come to the right place.
+            
+                Regardless of why you want to learn about design, at <a href="https://www.figma.com" target="_blank"
+                    rel="noopener noreferrer">Figma</a>, we want to make it as easy as possible for you, so we
+                built this Learn Design program. This doesn’t exist just to help you learn to use the tools that we’ve created but
+                to
+                learn the fundamentals of design and the concepts behind the largest digital products that exist today.
+            </p>
+            <p>
+                The video below would submerge you with knowledge on how to design with
+                Figma.
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dXQ7IHkTiMM" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <p>
+                <button class="button">
+                    <a href="https://www.figma.com/resources/learn-design/" target="_blank" rel="noopener noreferrer" class="learnMore">Learn More</a>
+                </button>
+            </p>
+        </article>
+
+        <article>
+            <h1>Learn GIT and GitHub</h1>
+            <p>
+                Learning git and github could be quite challenging. But what you have
+                to kno is that you don't have to know everything about it.
+            </p>
+            <p>
+                The Video below given you the essentials.
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RGOj5yH7evk" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <p>
+                <button class="button">
+                    <a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners" target="_blank" rel="noopener noreferrer" class="learnMore">Learn
+                        More</a>
+                </button>
+            </p>
+        </article>
+        <article>
+            <h1>Learn HTML</h1>
+            <p>
+                HTML is the standard markup language for creating Web pages.
+                It describes the structure of a Web page and
+                consists of a series of elements.
+                HTML elements tell the browser how to display the content and html
+                elements label pieces of content such as "this is a heading",
+                "this is a paragraph", "this is a link", etc.
+            </p>
+            <p>
+                <button class="button">
+                    <a href="https://www.w3schools.com/html/" target="_blank"
+                        rel="noopener noreferrer" class="learnMore">Learn More</a>
+                </button>
+            </p>
+        </article>
+        <article>
+            <h1>Learn Flutter</h1>
+            <p>
+                Get Started with this video.
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1ukSR1GRtMU" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <p>
+                <button class="button">
+                    <a href="https://flutter.dev/" target="_blank" rel="noopener noreferrer" class="learnMore">Learn
+                        More</a>
+                </button>
+            </p>
+        </article>
+    </section>
 
     <footer>
-
+        <h1>References</h1>
+        <ul id="references">
+            <li><a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a></li>
+            <li><a href="https://product.hubspot.com/" target="_blank" rel="noopener noreferrer">Product Hubspot</a></li>
+            <li><a href="https://www.w3schools.com/html/" target="_blank" rel="noopener noreferrer">w3schools</a></li>
+            <li><a href="https://flutter.dev/" target="_blank" rel="noopener noreferrer">Flutter</a></li>
+        </ul>
     </footer>
 </body>
 </html>
