--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Goals for the HNG internship</h1>
+        <h2 class="ease">Hey!</h2>
     </header>
 
     <main>
