--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.ibb.co/MZgHNtX/Nesta-Brand-1.png">
     <link rel="stylesheet" href="css/Zuri-Article.css">
     <title>Zuri-Article</title>
 </head>
 <body>
     <header>
-        <h1>Goals for the HNG internship</h1>
-        <h2 class="ease">Hey!</h2>
+        <h1 class="ease">Hey!</h1>
     </header>
 
     <main>
         <article>
-            <h1 class="ease">Hey!</h1>
+            <h1 class="headings color">Goals for the HNG internship</h1>
             <p>
                 I'm Nesta, an international intern from Cameroon
                 this year(2021) at the
@@ -49,15 +51,15 @@
                 Most importantly I wanted to show the world what I'm qualified to be on
                 the job market.
             </p>
-            <h2 class="ease">I Hope for the best!😊</h2>
+            <h2 id="hopeDBest">I Hope for the best!😊</h2>
         </article>
     </main>
 
     <section>
-        <h1 class="smallCaps">Cool stuffs you should learn</h1>
+        <h1 class="smallCaps headings color">Cool stuffs you should learn</h1>
 
         <article>
-            <h1>Learn Figma</h1>
+            <h1 class="headings color">Learn Figma</h1>
             <p>
                 If you’ve ever wanted to pursue a career in design, learn the ins-and-outs of the design process, or just want to
                 improve your relationships with the designers in your life, you’ve come to the right place.
@@ -76,14 +78,14 @@
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <p>
-                <button class="button">
+                <span class="button">
                     <a href="https://www.figma.com/resources/learn-design/" target="_blank" rel="noopener noreferrer" class="learnMore">Learn More</a>
-                </button>
+                </span>
             </p>
         </article>
 
         <article>
-            <h1>Learn GIT and GitHub</h1>
+            <h1 class="headings color">Learn GIT and GitHub</h1>
             <p>
                 Learning git and github could be quite challenging. But what you have
                 to kno is that you don't have to know everything about it.
@@ -95,14 +97,14 @@
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <p>
-                <button class="button">
+                <span class="button">
                     <a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners" target="_blank" rel="noopener noreferrer" class="learnMore">Learn
                         More</a>
-                </button>
+                </span>
             </p>
         </article>
         <article>
-            <h1>Learn HTML</h1>
+            <h1 class="headings color">Learn HTML</h1>
             <p>
                 HTML is the standard markup language for creating Web pages.
                 It describes the structure of a Web page and
@@ -112,14 +114,14 @@
                 "this is a paragraph", "this is a link", etc.
             </p>
             <p>
-                <button class="button">
+                <span class="button">
                     <a href="https://www.w3schools.com/html/" target="_blank"
                         rel="noopener noreferrer" class="learnMore">Learn More</a>
-                </button>
+                </span>
             </p>
         </article>
         <article>
-            <h1>Learn Flutter</h1>
+            <h1 class="headings color">Learn Flutter</h1>
             <p>
                 Get Started with this video.
             </p>
@@ -127,16 +129,16 @@
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <p>
-                <button class="button">
+                <span class="button">
                     <a href="https://flutter.dev/" target="_blank" rel="noopener noreferrer" class="learnMore">Learn
                         More</a>
-                </button>
+                </span>
             </p>
         </article>
     </section>
 
     <footer>
-        <h1>References</h1>
+        <h1 class="headings color">References</h1>
         <ul id="references">
             <li><a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a></li>
             <li><a href="https://product.hubspot.com/" target="_blank" rel="noopener noreferrer">Product Hubspot</a></li>
