--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -22,7 +22,7 @@
             <p>
                 I'm Nesta, an international intern from Cameroon
                 this year(2021) at the
-                <a href="https://internship.zuri.team/" target="_blank" rel="noopener noreferrer">Zuri Intership</a>.
+                <a href="https://internship.zuri.team/" target="_blank" rel="noopener noreferrer" class="ulinks">Zuri Intership</a>.
             </p>
             <p>
                 when joining this team I definitely had a lot of goals in mind,
@@ -59,13 +59,13 @@
         <h1 class="smallCaps headings color">Cool stuffs you should learn</h1>
 
         <article>
-            <h1 class="headings color">Learn Figma</h1>
+            <h1 class="headings color sub">Learn Figma</h1>
             <p>
                 If you’ve ever wanted to pursue a career in design, learn the ins-and-outs of the design process, or just want to
                 improve your relationships with the designers in your life, you’ve come to the right place.
             
                 Regardless of why you want to learn about design, at <a href="https://www.figma.com" target="_blank"
-                    rel="noopener noreferrer">Figma</a>, we want to make it as easy as possible for you, so we
+                    rel="noopener noreferrer" class="ulinks">Figma</a>, we want to make it as easy as possible for you, so we
                 built this Learn Design program. This doesn’t exist just to help you learn to use the tools that we’ve created but
                 to
                 learn the fundamentals of design and the concepts behind the largest digital products that exist today.
@@ -85,7 +85,7 @@
         </article>
 
         <article>
-            <h1 class="headings color">Learn GIT and GitHub</h1>
+            <h1 class="headings color sub">Learn GIT and GitHub</h1>
             <p>
                 Learning git and github could be quite challenging. But what you have
                 to kno is that you don't have to know everything about it.
@@ -104,7 +104,7 @@
             </p>
         </article>
         <article>
-            <h1 class="headings color">Learn HTML</h1>
+            <h1 class="headings color sub">Learn HTML</h1>
             <p>
                 HTML is the standard markup language for creating Web pages.
                 It describes the structure of a Web page and
@@ -121,7 +121,7 @@
             </p>
         </article>
         <article>
-            <h1 class="headings color">Learn Flutter</h1>
+            <h1 class="headings color sub">Learn Flutter</h1>
             <p>
                 Get Started with this video.
             </p>
