--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -25,30 +25,30 @@
                 <a href="https://internship.zuri.team/" target="_blank" rel="noopener noreferrer" class="ulinks">Zuri Intership</a>.
             </p>
             <p>
-                when joining this team I definitely had a lot of goals in mind,
-                I mean who wouldn't?😅 for me, my goals where quite straight forward:
-                I had to get the most out of this 8-week journey. i.e get into the right tracks
-                (Digital Marketing, UI/UX, and Frontend Developement)
-                Be optimally focused and dedicated to complete all assignments/projects which will be given(*On time)
+                When joining this team I definitely had a lot of goals in mind,
+                I mean who wouldn't?😅 For me, my goals where quite straight forward:
+                I had to get the most out of this 8-weeks journey. <abbr title="That is">i.e.</abbr> get into the right tracks
+                (Digital Marketing, UI/UX, and Frontend Developement). 
+                Be optimally focused and dedicated to complete all assignments/projects which will be given(*On time).
                 Even though where I live internet connectivity is quite a challenge but this couldn't stop
                 me from persuing this quest for knowledge.
             </p>
             <p>
                 Gaining knowledge was a priority for me. But I couldn't just get knowledge
                 and leave. I had to open-mindedly share the knowledge I had with my
-                peers in this quest with me. To do this, relating with others, chating,
-                sharing ideas, and even making new friends.
+                peers. To do this, relating with others, chating,
+                sharing ideas, and even making new friends was the right thing to do.
             </p>
             <p>
                 There's this saying which says
-                <cite>Rules are there to be broken. Denzel Washington</cite>
-                But that's definitely not what I intented to do during the course of
+                <div><cite>Rules are there to be broken.<br>Denzel Washington</cite></div>
+                <br>But that's definitely not what I intented to do during the course of
                 this internship. Instead, my aim was to follow every single rule meticulously. I may
                 be a <em>"Mumu"</em>😅, but rather than being evicted for misconduct,
                 being present till the end was the goal.
             </p>
             <p>
-                Most importantly I wanted to show the world what I'm qualified to be on
+                Most importantly I wanted to show the world that I'm qualified to be on
                 the job market.
             </p>
             <h2 id="hopeDBest">I Hope for the best!😊</h2>
