--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -18,7 +18,7 @@
 
     <main>
         <article>
-            <h1 class="headings color">Goals for the HNG internship</h1>
+            <h1 class="headings color">My Goals For The HNG Internship</h1>
             <p>
                 I'm Nesta, an international intern from Cameroon
                 this year(2021) at the
