--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -91,7 +91,7 @@
                 to kno is that you don't have to know everything about it.
             </p>
             <p>
-                The Video below given you the essentials.
+                The Video below gives you the essentials.
             </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RGOj5yH7evk" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
