--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -74,7 +74,7 @@
                 The video below would submerge you with knowledge on how to design with
                 Figma.
             </p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/dXQ7IHkTiMM" title="YouTube video player"
+            <iframe src="https://www.youtube.com/embed/dXQ7IHkTiMM" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <p>
@@ -93,7 +93,7 @@
             <p>
                 The Video below gives you the essentials.
             </p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/RGOj5yH7evk" title="YouTube video player"
+            <iframe src="https://www.youtube.com/embed/RGOj5yH7evk" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <p>
@@ -125,7 +125,7 @@
             <p>
                 Get Started with this video.
             </p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/1ukSR1GRtMU" title="YouTube video player"
+            <iframe src="https://www.youtube.com/embed/1ukSR1GRtMU" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <p>
