--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -55,10 +55,10 @@
         </article>
     </main>
 
-    <section>
+    <section id="learn">
         <h1 class="smallCaps headings color">Cool stuffs you should learn</h1>
 
-        <article>
+        <article class="article">
             <h1 class="headings color sub">Learn Figma</h1>
             <p>
                 If you’ve ever wanted to pursue a career in design, learn the ins-and-outs of the design process, or just want to
@@ -84,7 +84,7 @@
             </p>
         </article>
 
-        <article>
+        <article class="article">
             <h1 class="headings color sub">Learn GIT and GitHub</h1>
             <p>
                 Learning git and github could be quite challenging. But what you have
@@ -103,7 +103,7 @@
                 </span>
             </p>
         </article>
-        <article>
+        <article class="article">
             <h1 class="headings color sub">Learn HTML</h1>
             <p>
                 HTML is the standard markup language for creating Web pages.
@@ -120,7 +120,7 @@
                 </span>
             </p>
         </article>
-        <article>
+        <article class="article">
             <h1 class="headings color sub">Learn Flutter</h1>
             <p>
                 Get Started with this video.
