--- a/Zuri-Article.html
+++ b/Zuri-Article.html
@@ -40,8 +40,8 @@
                 sharing ideas, and even making new friends was the right thing to do.
             </p>
             <p>
-                There's this saying which says
-                <div><cite>Rules are there to be broken.<br>Denzel Washington</cite></div>
+                <strong>Denzel Washington</strong> once said,
+                <div><cite>Rules are there to be broken.</cite></div>
                 <br>But that's definitely not what I intented to do during the course of
                 this internship. Instead, my aim was to follow every single rule meticulously. I may
                 be a <em>"Mumu"</em>😅, but rather than being evicted for misconduct,
@@ -66,14 +66,8 @@
                         If you’ve ever wanted to pursue a career in design, learn the ins-and-outs of the design process, or just want
                         to
                         improve your relationships with the designers in your life, you’ve come to the right place.
-                
-                        Regardless of why you want to learn about design, at <a href="https://www.figma.com" target="_blank"
-                            rel="noopener noreferrer" class="ulinks">Figma</a>, we want to make it as easy as possible for you, so we
-                        built this Learn Design program. This doesn’t exist just to help you learn to use the tools that we’ve created
-                        but
-                        to
-                        learn the fundamentals of design and the concepts behind the largest digital products that exist today.
-                    </p>
+                        
+                       </p>
                     <p>
                         The video below would submerge you with knowledge on how to design with
                         Figma.
@@ -153,7 +147,7 @@
         <div id="references">
             <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer"><img src="https://www.vectorlogo.zone/logos/figma/figma-ar21.svg" alt="Figma logo"></a>
             <a href="https://product.hubspot.com/" target="_blank" rel="noopener noreferrer"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/HubSpot_Logo.svg" alt="Hubspot logo"></a>
-            <a href="https://www.w3schools.com/" target="_blank" rel="noopener noreferrer"  id="w3s"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/W3Schools_logo.svg/255px-W3Schools_logo.svg.png" alt="W3schools Logo" width="70"></a>
+            <a href="https://www.w3schools.com/" target="_blank" rel="noopener noreferrer"><img  id="w3s" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/W3Schools_logo.svg/255px-W3Schools_logo.svg.png" alt="W3schools Logo"></a>
             <a href="https://flutter.dev/" target="_blank" rel="noopener noreferrer"><img src="https://www.vectorlogo.zone/logos/flutterio/flutterio-ar21.svg" alt="Flutter Logo"></a>
         </div>
     </footer>
